[tool.poetry]
name = "ml-utils"
version = "0.1.0"
description = ""
authors = ["Bogdan Gulowaty <b.gulowaty@gmail.com>"]
readme = "README.md"
packages = [{include = "mlutils"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
mlxtend = "^0.21.0"
scikit-learn = "^1.2.1"
python-box = "^7.0.1"
pandas = "2"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
cvxpy = "^1.3.0"
pypruning = {git = "https://github.com/sbuschjaeger/PyPruning.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
